tests/fixtures/invalid/bytes_add_bool.py
# Cannot add Bytes and Bool
x: bytes = b"hello" + True
